--- a/assets/components/Sidebar.html
+++ b/assets/components/Sidebar.html
@@ -76,9 +76,9 @@
       <li class="nav-link submenu-parent" id="menu-planejamento">
           <a href="#"><i class='bx bx-clipboard icon'></i><span class="text nav-text">Planejamento</span><i class='bx bx-chevron-right submenu-arrow'></i></a>
           <ul class="submenu">
-              <li id="plan-Preencher"><a href="/Pages/PlanejamentoAnual/PreencherPlanejamento.html"><i class='bx bx-edit icon'></i><span class="text nav-text">Preencher</span></a></li>
-              <li id="plan-Gerenciar"><a href="/Pages/PlanejamentoAnual/GerenciaPlanejamento.html"><i class='bx bx-cog icon'></i><span class="text nav-text">Grupos / Contas</span></a></li>
-              <li id="plan-Permissoes"><a href="/Pages/PlanejamentoAnual/GerenciarPermissoes.html"><i class='bx bx-lock-alt icon'></i><span class="text nav-text">Ger. Permissões</span></a></li>
+              <li id="plan-Preencher"><a href="/Pages/PlanejamentoAnual/PreencherPlanejamento.html"><i class='bx bx-edit icon'></i><span class="text nav-text">Preencher Planejamento</span></a></li>
+              <li id="plan-Gerenciar"><a href="/Pages/PlanejamentoAnual/GerenciaPlanejamento.html"><i class='bx bx-cog icon'></i><span class="text nav-text">Gerenciar Planejamento</span></a></li>
+              <li id="plan-Permissoes"><a href="/Pages/PlanejamentoAnual/GerenciarPermissoes.html"><i class='bx bx-lock-alt icon'></i><span class="text nav-text">Gerenciar Permissões</span></a></li>
           </ul>
       </li>
 
@@ -108,4 +108,3 @@
     </ul>
   </div>
 </nav>
-
