--- a/assets/components/Sidebar.html
+++ b/assets/components/Sidebar.html
@@ -32,6 +32,7 @@
           <a href="#"><i class='bx bx-slider-alt icon'></i><span class="text nav-text">Controles</span><i class='bx bx-chevron-right submenu-arrow'></i></a>
           <ul class="submenu">
               <li id="ctrl-PlanosVigentes"><a href="/Pages/Controles/PlanosVigentes.html"><i class='bx bx-calendar-heart icon'></i><span class="text nav-text">Planos Vigentes</span></a></li>
+              <li id="ctrl-OportunidadeFabrica"><a href="/Pages/Controles/OportunidadeFabrica.html"><i class='bx bx-trophy icon'></i><span class="text nav-text">Oportunidade da Fábrica</span></a></li>
               <li id="ctrl-MaquinaParada"><a href="/Pages/Controles/MaquinasParadas.html"><i class='bx bx-stop-circle icon'></i><span class="text nav-text">Máquinas Paradas</span></a></li>
               <li id="ctrl-Kit50"><a href="/Pages/Controles/Kits50Horas.html"><i class='bx bx-box icon'></i><span class="text nav-text">Kit 50Hr</span></a></li>
               <li id="ctrl-ContagemDiaria"><a href="/Pages/Controles/ContagemDiaria.html"><i class='bx bx-timer icon'></i><span class="text nav-text">Contagem Diária</span></a></li>
@@ -60,9 +61,11 @@
       
       <!-- Checklist -->
       <li class="nav-link submenu-parent" id="menu-checklist">
-          <a href="#"><i class='bx bx-list-check icon'></i><span class="text nav-text">Checklist</span><i class='bx bx-chevron-right submenu-arrow'></i></a>            <ul class="submenu">
-          <li id="checklist-inicio"><a href="/Pages/Checklist/Checklist.html"><i class='bx bx-list-check icon'></i><span class="text nav-text">Checklists</span></a></li>
-      </ul>
+          <a href="#"><i class='bx bx-list-check icon'></i><span class="text nav-text">Checklist</span><i class='bx bx-chevron-right submenu-arrow'></i></a>
+          <ul class="submenu">
+              <li id="checklist-inicio"><a href="/Pages/Checklist/Checklist.html"><i class='bx bx-list-check icon'></i><span class="text nav-text">Checklists</span></a></li>
+          </ul>
+      </li>
 
       <!-- Lubrificantes -->
       <li class="nav-link submenu-parent" id="menu-lubrificantes">
