--- a/assets/components/Sidebar.html
+++ b/assets/components/Sidebar.html
@@ -39,7 +39,17 @@
               <li id="ctrl-PedidosPecas"><a href="/Pages/Controles/PedidosPecas.html"><i class='bx bx-timer icon'></i><span class="text nav-text">Pedidos Peças</span></a></li>
               <li id="ctrl-PedidosPrim"><a href="/Pages/Controles/PedidosPrim.html"><i class='bx bx-timer icon'></i><span class="text nav-text">Pedidos Prim</span></a></li>
               <li id="ctrl-Prim"><a href="/Pages/Controles/prim.html"><i class='bx bx-list-check icon'></i><span class="text nav-text">Controle Prim</span></a></li>
-              <li id="ctrl-ControleFerramentas"><a href="/Pages/Controles/ControleFerramentas.html"><i class='bx bxs-wrench icon'></i><span class="text nav-text">Ferramentas</span></a></li>
+          </ul>
+      </li>
+
+      <!-- Ferramentas -->
+      <li class="nav-link submenu-parent" id="menu-ferramentas">
+          <a href="#"><i class='bx bxs-wrench icon'></i><span class="text nav-text">Ferramentas</span><i class='bx bx-chevron-right submenu-arrow'></i></a>
+          <ul class="submenu">
+              <li id="ctrl-ControleAlocacao"><a href="/Pages/Ferramentas/ControleFerramentas-Alocacao.html"><i class='bx bx-export icon'></i><span class="text nav-text">Alocações</span></a></li>
+              <li id="ctrl-ControleEstoque"><a href="/Pages/Ferramentas/ControleFerramentas-Estoque.html"><i class='bx bx-package icon'></i><span class="text nav-text">Estoque</span></a></li>
+              <li id="ctrl-ControleGrupos"><a href="/Pages/Ferramentas/ControleFerramentas-Grupos.html"><i class='bx bx-collection icon'></i><span class="text nav-text">Grupos</span></a></li>
+              <li id="ctrl-ControleHistorico"><a href="/Pages/Ferramentas/ControleFerramentas-Historico.html"><i class='bx bx-history icon'></i><span class="text nav-text">Histórico</span></a></li>
           </ul>
       </li>
 
@@ -91,6 +101,7 @@
           <ul class="submenu">
               <li id="admin-CadastroGestores"><a href="/Pages/Cadastros/CadastrarGestores.html"><i class='bx bx-user-voice icon'></i><span class="text nav-text">Gestores</span></a></li>
               <li id="admin-CadastroTecnicos"><a href="/Pages/Cadastros/CadastrarTecnicos.html"><i class='bx bx-user-check icon'></i><span class="text nav-text">Técnico</span></a></li>
+              <li id="admin-UsuariosOnline"><a href="/Pages/Cadastros/UsuariosOnline.html"><i class='bx bx-radio-circle icon'></i><span class="text nav-text">Usuários Online</span></a></li>
           </ul>
       </li>
 
