--- a/assets/components/Sidebar.html
+++ b/assets/components/Sidebar.html
@@ -31,14 +31,19 @@
       <li class="nav-link submenu-parent" id="menu-controles">
           <a href="#"><i class='bx bx-slider-alt icon'></i><span class="text nav-text">Controles</span><i class='bx bx-chevron-right submenu-arrow'></i></a>
           <ul class="submenu">
-              <li id="ctrl-PlanosVigentes"><a href="/Pages/Controles/PlanosVigentes.html"><i class='bx bx-calendar-heart icon'></i><span class="text nav-text">Planos Vigentes</span></a></li>
-              <li id="ctrl-OportunidadeFabrica"><a href="/Pages/Controles/OportunidadeFabrica.html"><i class='bx bx-trophy icon'></i><span class="text nav-text">Oportunidade da Fábrica</span></a></li>
               <li id="ctrl-MaquinaParada"><a href="/Pages/Controles/MaquinasParadas.html"><i class='bx bx-stop-circle icon'></i><span class="text nav-text">Máquinas Paradas</span></a></li>
               <li id="ctrl-Kit50"><a href="/Pages/Controles/Kits50Horas.html"><i class='bx bx-box icon'></i><span class="text nav-text">Kit 50Hr</span></a></li>
               <li id="ctrl-ContagemDiaria"><a href="/Pages/Controles/ContagemDiaria.html"><i class='bx bx-timer icon'></i><span class="text nav-text">Contagem Diária</span></a></li>
               <li id="ctrl-PedidosPecas"><a href="/Pages/Controles/PedidosPecas.html"><i class='bx bx-timer icon'></i><span class="text nav-text">Pedidos Peças</span></a></li>
-              <li id="ctrl-PedidosPrim"><a href="/Pages/Controles/PedidosPrim.html"><i class='bx bx-timer icon'></i><span class="text nav-text">Pedidos Prim</span></a></li>
-              <li id="ctrl-Prim"><a href="/Pages/Controles/prim.html"><i class='bx bx-list-check icon'></i><span class="text nav-text">Controle Prim</span></a></li>
+              <li id="E-commerce"><a href="/Pages/E-commerce/E-commerce.html"><i class='bx bx-timer icon'></i><span class="text nav-text">E-commerce</span></a></li>
+          </ul>
+      </li>
+            <!-- Planos -->
+      <li class="nav-link submenu-parent" id="menu-planos">
+          <a href="#"><i class='bx bx-trophy icon'></i><span class="text nav-text">Planos</span><i class='bx bx-chevron-right submenu-arrow'></i></a>
+          <ul class="submenu">
+              <li id="ctrl-PlanosVigentes"><a href="/Pages/Planos/PlanosVigentes.html"><i class='bx bx-calendar-heart icon'></i><span class="text nav-text">Planos Vigentes</span></a></li>
+              <li id="ctrl-OportunidadeFabrica"><a href="/Pages/Planos/OportunidadeFabrica.html"><i class='bx bx-trophy icon'></i><span class="text nav-text">Oportunidade da Fábrica</span></a></li>
           </ul>
       </li>
 
@@ -92,6 +97,16 @@
               <li id="plan-Preencher"><a href="/Pages/PlanejamentoAnual/PreencherPlanejamento.html"><i class='bx bx-edit icon'></i><span class="text nav-text">Preencher Planejamento</span></a></li>
               <li id="plan-Gerenciar"><a href="/Pages/PlanejamentoAnual/GerenciaPlanejamento.html"><i class='bx bx-cog icon'></i><span class="text nav-text">Gerenciar Planejamento</span></a></li>
               <li id="plan-Permissoes"><a href="/Pages/PlanejamentoAnual/GerenciarPermissoes.html"><i class='bx bx-lock-alt icon'></i><span class="text nav-text">Gerenciar Permissões</span></a></li>
+          </ul>
+      </li>
+
+      <!-- Plano de Ação -->
+      <li class="nav-link submenu-parent" id="menu-plano-acao">
+          <a href="#"><i class='bx bx-task icon'></i><span class="text nav-text">Plano de Ação</span><i class='bx bx-chevron-right submenu-arrow'></i></a>
+          <ul class="submenu">
+              <li id="acao-Gerenciar"><a href="/Pages/PlanodeAcao/GerenciarPlanosAcao.html"><i class='bx bx-list-ul icon'></i><span class="text nav-text">Gerenciar Planos</span></a></li>
+              <li id="acao-Novo"><a href="/Pages/PlanodeAcao/form_PlanoAcao.html"><i class='bx bx-plus-circle icon'></i><span class="text nav-text">Novo Plano</span></a></li>
+              <li id="acao-KPIs"><a href="/Pages/PlanodeAcao/form_KPIs.html"><i class='bx bx-target-lock icon'></i><span class="text nav-text">Cadastrar KPIs</span></a></li>
           </ul>
       </li>
 
